refactored for angular

--- a/templates/partials/about.html
+++ b/templates/partials/about.html
@@ -1,7 +1,10 @@
-<ul>
+<ul class= "nav">
     <li ng-click="home()">home</li>
     <li ng-click="projects()">projects</li>
 </ul>
 <ul>
     <li><img ng-src="./images/site.png" alt="Description" /></li>
+</ul>
+<ul>
+    <li></li>
 </ul>
