--- a/templates/partials/home.html
+++ b/templates/partials/home.html
@@ -1,13 +1,13 @@
-<ul>
+<ul class ="nav">
     <li ng-click="about()">about</li>
     <li ng-click="projects()">projects</li>
 </ul>
-<ul>
+<ul class="list" id="homePage">
     <li>
-        <h1>Ben Marcantel</h1>
+        <div>Ben Marcantel</div>
     </li>
     <li>
-    <canvas id= "landing" ></canvas>
+    <canvas id="landing" height = "512" width = "512"></canvas>
     </li>
 </ul>
 
