--- a/templates/partials/projects.html
+++ b/templates/partials/projects.html
@@ -2,11 +2,9 @@
     <li ng-click="home()">home</li>
     <li ng-click="about()">about</li>
 </ul>
-<ul class="software">
-    <li>
-        Software
-    </li>
-
+<div>Software</div>
+<div class= "linkContainer">
+<ul  class ="portList" id="software">
     <li>
         <iframe src="https://ben-marcantel.github.io/p01FollowAlong/"></iframe>
     </li>
@@ -20,21 +18,22 @@
         <iframe src= "https://ben-marcantel.github.io/exercise2/"></iframe>
     </li>
 </ul>
-<ul class="sound">
-    <li>
-        Sound Design/Composition
-    </li>
+</div>
+<div>Sound Design/Composition</div>
+<div class= "linkContainer">
+<ul class="portList" id="sound">
     <li>
         <iframe src="https://sugarskulls.bandcamp.com/"></iframe>
     </li>
 </ul>
-<ul class="animation">
-    <li>
-        Animation
-    </li>
+</div>
+<div>Animation</div>
+<div class= "linkContainer">
+<ul class="portList" id="animation">
     <li>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Ls4qYq3t0Jc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </li>
     <li><iframe width="560" height="315" src="https://www.youtube.com/embed/9tftG_UsaqU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></li>
     <li><iframe width="560" height="315" src="https://www.youtube.com/embed/-OEnEWAdOc0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></li>
 </ul>
+</div>
