--- a/templates/partials/home.html
+++ b/templates/partials/home.html
@@ -2,13 +2,9 @@
     <li ng-click="about()">about</li>
     <li ng-click="projects()">projects</li>
 </ul>
-<ul class="list" id="homePage">
-    <li>
-        <div>Ben Marcantel</div>
-    </li>
-    <li>
-    <canvas id="landing" height = "512" width = "512"></canvas>
-    </li>
-</ul>
+<canvas id="landing" height = "512" width = "512"></canvas>    
+<div id="ben">Ben Marcantel</div>
+
+    
 
 
